apps/monitoring/kromgo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kromgo
  namespace: monitoring
spec:
  selector:
    app: kromgo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP
