apps/monitoring/kromgo/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kromgo
  namespace: monitoring
spec:
  parentRefs:
    - name: external-gateway
      namespace: gateway
  hostnames:
    - kromgo.sholdee.net
  rules:
    - backendRefs:
        - name: kromgo
          namespace: monitoring
          port: 80
