apps/monitoring/kromgo/manifests/netpol.yaml
---
# yaml-language-server: $schema=https://kube-schemas.shold.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kromgo
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app: kromgo
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: external-gateway
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: '^/badges/kubernetes_version(\?format=shields)?$'
              - method: GET
                path: '^/badges/cluster_node_count(\?format=shields)?$'
              - method: GET
                path: '^/badges/cluster_pod_count(\?format=shields)?$'
              - method: GET
                path: '^/badges/cluster_cpu_usage(\?format=shields)?$'
              - method: GET
                path: '^/badges/cluster_memory_usage(\?format=shields)?$'
              - method: GET
                path: '^/badges/cluster_age_days(\?format=shields)?$'
              - method: GET
                path: '^/badges/cluster_uptime_days(\?format=shields)?$'
